# Qt_game_snake

./: CMakeLists.txt  game.cpp  game.h  main.cpp
